--- a/templates/default/style.css
+++ b/templates/default/style.css
@@ -102,7 +102,8 @@ button em {margin-right:5px}
 
 #divGroupForm {min-height:600px; padding:10px;}
 #divGroupForm #imgAvatar {height:100px; margin:3px}
-
+#divGroupForm .memberButtons {display:inline-block; width:auto; height:auto}
+#divGroupForm .btn-member {width:auto; margin:2px 1px 1px 1px;}
 #removeGroup {padding:10px; min-height:600px;}
 
 #scope .readme {text-align:left}
