--- a/views/html/groupslistbyuser.html
+++ b/views/html/groupslistbyuser.html
@@ -12,38 +12,30 @@ paginátor:  $scope.paginators=[{"offset":#, "pageNo":#, "enabled":true|false}, 
 -->
 <div ng-include="templates.navbar"></div>
 <div ng-include="templates.popup"></div>
-<div class="alert alert-danger" ng-if="msgs.length > 0">
+<div class="alert alert-{{msgClass}}" ng-if="msgs.length > 0">
 	<p ng-repeat="msg in msgs">{{txt(msg)}}</p>
 </div>
 <div class="page" id="page">
 	<div class="pageBody members" id="pageBody">
 		<h3><em class="fa fa-user"></em>&nbsp;{{formTitle}}</h3>				
-		<form id="browserForm" method="get" action="{{MYDOMAIN}}" target="_self">
-			<input type="hidden" id="option" name="option" value="members" /> 
-			<input type="hidden" id="task" name="task" value="list" /> 
-			<input type="hidden" id="type" name="type" value="group" />
-			<input type="hidden" id="objectid" name="objectid" value="{{objectid}}" />
+		<form id="groupsListByUser" method="get" action="{{MYDOMAIN}}" target="_self">
+			<input type="hidden" id="option" name="option" value="groups" /> 
+			<input type="hidden" id="task" name="task" value="list_by_member" /> 
+			<input type="hidden" id="type" name="type" value="groups" />
 			<input type="hidden" id="id" name="id" value="{{id}}" />
-			<input type="hidden" id="itemTask" name="itemTask" value="form" /> 
+			<input type="hidden" id="user_id" name="user_id" value="{{user_id}}" />
 			<input type="hidden" name="{{crsToken}}" value="1" /> 
 			<input type="hidden" id="offset" name="offset" value="{{offset}}" /> 
 			<input type="hidden" id="limit" name="limit" value="{{limit}}" /> 
 			<input type="hidden" id="order" name="order" value="{{order}}" /> 
 			<input type="hidden" id="order_dir" name="order_dir" value="{{order_dir}}" />
          	<div class="search">
-            	<input type="text" name="searchstr" id="searchstr" value="{{searchstr}}" />
-	            <select name="filterstate">
-	             	<option value=""{{filterStateSelected('',filterstate)}}>{{txt('ALLSTATE')}}</option>
-	             	<option value="aspirant"{{filterStateSelected('aspirant',filterstate)}}>{{txt('aspirant')}}</option>
-	             	<option value="active"{{filterStateSelected('active',filterstate)}}>{{txt('active')}}</option>
-	             	<option value="excluded"{{filterStateSelected('excluded',filterstate)}}>{{txt('excluded')}}</option>
-	             	<option value="admin"{{filterStateSelected('admin',filterstate)}}>{{txt('admin')}}</option>
-	            </select>
+            	<input type="text" name="filter_str" id="filter_str" value="{{filter_str}}" />
 	            <div style="display:inline-block; width:auto">
-	                 <button type="button" id="searchBtn" onclick="searchClick()" class="btn btn-primary">
+	                 <button type="button" id="searchBtn" class="btn btn-primary">
 	                 	<em class="fa fa-search"></em>
 	                 </button>
-	                 <button type="button" id="delSearchBtn" onclick="delSearchClick()" class="btn btn-danger">
+	                 <button type="button" id="delSearchBtn" class="btn btn-danger">
 	                 	<em class="fa fa-times"></em>
 	                 </button>
 	            </div>
@@ -51,31 +43,33 @@ paginátor:  $scope.paginators=[{"offset":#, "pageNo":#, "enabled":true|false}, 
             <table class="table table-bordered">
 			<thead class="thead-dark">
 		  		<tr>
-			  	 	<th class="user_id {{thClass('user_id', order, order_dir)}}" style="cursor:pointer" 
-			  	 	    onclick="titleClick('user_id',order,order_dir)">
+			  	 	<th class="id {{thClass('g.id', order, order_dir)}}" style="cursor:pointer" 
+			  	 	    onclick="titleClick('g.id',order,order_dir)">
 			  	 	    {{txt('id')}}&nbsp;
-			  	 	    <em class="fa {{titleIcon('user_id', order, order_dir)}}"></em>		  	 	
+			  	 	    <em class="fa {{titleIcon('g.id', order, order_dir)}}"></em>		  	 	
 			  	 	</th>
-			  	 	<th>&nbsp;</th>
-			  	 	<th class="nick {{thClass('nick', order, order_dir)}}" style="cursor:pointer" 
-			  	 	    onclick="titleClick('nick',order,order_dir)">
-			  	 	    {{txt('nick')}}&nbsp;
-			  	 	    <em class="fa {{titleIcon('nick', order, order_dir)}}"></em>		  	 	
+			  	 	<th class="name {{thClass('g.name', order, order_dir)}}" style="cursor:pointer" 
+			  	 	    onclick="titleClick('g.name',order,order_dir)">
+			  	 	    {{txt('name')}}&nbsp;
+			  	 	    <em class="fa {{titleIcon('g.name', order, order_dir)}}"></em>		  	 	
 	            	</th>
-			  	 	<th class="state {{thClass('state', order, order_dir)}}" style="cursor:pointer" 
-			  	 	    onclick="titleClick('state',order,order_dir)">
+			  	 	<th class="state {{thClass('g.state', order, order_dir)}}" style="cursor:pointer" 
+			  	 	    onclick="titleClick('g.state',order,order_dir)">
 			  	 	    {{txt('state')}}&nbsp;		  	 	
-			  	 	    <em class="fa {{titleIcon('state', order, order_dir)}}"></em>		  	 	
+			  	 	    <em class="fa {{titleIcon('g.state', order, order_dir)}}"></em>		  	 	
+			  	 	</th>
+			  	 	<th>
+			  	 	    {{txt('userstate')}}&nbsp;		  	 	
 			  	 	</th>
 		  		</tr>
 			</thead>
 			<tbody>
-				<tr ng-repeat="item in items" ng-init="onload($last)" 
+				<tr ng-repeat="item in items" ng-init="itemLoad($last)" 
 				    class="trClass()" style="cursor:pointer" id="tr_{{item.id}}">
-					<td class="td_user_id">{{item.id}}</td>
-					<td class="td_avatar"><img src="{{item.avatar}}" style="height:30px"/></td>
-					<td class="td_nick">{{item.nick}}</td>
-					<td class="td_state">{{txt(item.state)}}</td>
+					<td class="td_id">{{item.id}}</td>
+					<td class="td_name">{{item.name}}</td>
+					<td class="td_state">{{item.state}}</td>
+					<td class="td_userstate">{{item.userstate}}</td>
 				</tr>
 			</tbody>        
         	</table>
