--- a/views/html/groupslistbyuser.html
+++ b/views/html/groupslistbyuser.html
@@ -17,8 +17,9 @@ paginátor:  $scope.paginators=[{"offset":#, "pageNo":#, "enabled":true|false}, 
 </div>
 <div class="page" id="page">
 	<div class="pageBody members" id="pageBody">
-		<h3><em class="fa fa-user"></em>&nbsp;{{formTitle}}</h3>				
-		<form id="groupsListByUser" method="get" action="{{MYDOMAIN}}" target="_self">
+		<h3><em class="fa fa-user"></em>&nbsp;{{formTitle}}</h3>
+		<div id="groupsListByUser">				
+		<form id="listForm" method="get" action="{{MYDOMAIN}}" target="_self">
 			<input type="hidden" id="option" name="option" value="groups" /> 
 			<input type="hidden" id="task" name="task" value="list_by_member" /> 
 			<input type="hidden" id="type" name="type" value="groups" />
@@ -30,7 +31,7 @@ paginátor:  $scope.paginators=[{"offset":#, "pageNo":#, "enabled":true|false}, 
 			<input type="hidden" id="order" name="order" value="{{order}}" /> 
 			<input type="hidden" id="order_dir" name="order_dir" value="{{order_dir}}" />
          	<div class="search">
-            	<input type="text" name="filter_str" id="filter_str" value="{{filter_str}}" />
+            	<input type="text" name="search_str" id="search_str" value="{{search_str}}" />
 	            <div style="display:inline-block; width:auto">
 	                 <button type="button" id="searchBtn" class="btn btn-primary">
 	                 	<em class="fa fa-search"></em>
@@ -43,48 +44,52 @@ paginátor:  $scope.paginators=[{"offset":#, "pageNo":#, "enabled":true|false}, 
             <table class="table table-bordered">
 			<thead class="thead-dark">
 		  		<tr>
-			  	 	<th class="id {{thClass('g.id', order, order_dir)}}" style="cursor:pointer" 
-			  	 	    onclick="titleClick('g.id',order,order_dir)">
-			  	 	    {{txt('id')}}&nbsp;
+			  	 	<th class="id {{thClass('g.id', order, order_dir)}}" style="cursor:pointer"
+			  	 		id="th_g.id"> 
+			  	 	    {{txt('ID')}}&nbsp;
 			  	 	    <em class="fa {{titleIcon('g.id', order, order_dir)}}"></em>		  	 	
 			  	 	</th>
 			  	 	<th class="name {{thClass('g.name', order, order_dir)}}" style="cursor:pointer" 
-			  	 	    onclick="titleClick('g.name',order,order_dir)">
-			  	 	    {{txt('name')}}&nbsp;
+			  	 	    id="th_g.name">
+			  	 	    {{txt('NAME')}}&nbsp;
 			  	 	    <em class="fa {{titleIcon('g.name', order, order_dir)}}"></em>		  	 	
 	            	</th>
 			  	 	<th class="state {{thClass('g.state', order, order_dir)}}" style="cursor:pointer" 
-			  	 	    onclick="titleClick('g.state',order,order_dir)">
-			  	 	    {{txt('state')}}&nbsp;		  	 	
+			  	 	    id="th_g.state">
+			  	 	    {{txt('STATE')}}&nbsp;		  	 	
 			  	 	    <em class="fa {{titleIcon('g.state', order, order_dir)}}"></em>		  	 	
 			  	 	</th>
 			  	 	<th>
-			  	 	    {{txt('userstate')}}&nbsp;		  	 	
+			  	 	    {{filterUser.nick}} {{txt('HD_USERSTATE')}}&nbsp;		  	 	
 			  	 	</th>
 		  		</tr>
 			</thead>
 			<tbody>
-				<tr ng-repeat="item in items" ng-init="itemLoad($last)" 
-				    class="trClass()" style="cursor:pointer" id="tr_{{item.id}}">
+				<tr ng-repeat="item in items" 
+				    class="{{trClass()}}" style="cursor:pointer" id="tr_{{item.id}}">
 					<td class="td_id">{{item.id}}</td>
 					<td class="td_name">{{item.name}}</td>
-					<td class="td_state">{{item.state}}</td>
-					<td class="td_userstate">{{item.userstate}}</td>
+					<td class="td_state">{{txt('GROUPSTATE_'+item.state)}}</td>
+					<td class="td_userstate">{{txt('USERSTATE_'+item.userstate)}}</td>
 				</tr>
 			</tbody>        
         	</table>
-	        <ul class="paginator">
+	        <ul id="paginator" class="paginator">
 	        	<li class="paginator-total">{{txt('TOTAL')}}:<var>{{total}}</var> {{txt('PAGES')}}</li> 
-	        	<li ng-repeat="paginator in paginators" class="page-link {{paginatorClass(paginator, offset, total)}}">
-	        		<a ng-if="paginator.enabled" 
-	        			href="#" onclick="paginatorClick(paginator.offset)">{{paginator.pageNo}}</a>
-	        		<var ng-if="(!paginator.enabled) && (paginator.pageNo != '...')" 
-	        			class="active">{{paginator.pageNo}}</var>
-	        		<span ng-if="(!paginator.enabled) && (paginator.pageNo == '...')" 
-	        			class="active">{{paginator.pageNo}}</span>
+	        	<li ng-repeat="pag in paginators" ng-init="itemLoad($last)" 
+	        	    class="page-link {{paginatorClass(pag, offset, total)}}">
+	        		<a ng-if="pag.enabled" target="_self"
+	        		   href="{{MYDOMAIN}}/opt/groups/list_by_member/offset/{{pag.offset}}">
+	        		   {{pag.pageNo}}
+	        		</a>
+	        		<var ng-if="(!pag.enabled) && (pag.pageNo != '...')" 
+	        			class="active">{{pag.pageNo}}</var>
+	        		<span ng-if="(!pag.enabled) && (pag.pageNo == '...')" 
+	        			class="active">{{pag.pageNo}}</span>
 	        	</li>
 	        </ul>
         </form>
+        </div><!-- groupsListByUser -->
 	</div><!--  #pageBody --> 						
 </div><!--  #page -->			
 <div ng-include="templates.footer"></div>
