--- a/views/html/working.html
+++ b/views/html/working.html
@@ -1,7 +1,7 @@
        	<div ng-include="templates.navbar"></div>
        	<div ng-include="templates.popup"></div>
         <div style="text-align:center; padding:20px;">
-  			<h2 style="text-align:center">Sajnos ez a funkció még nem müködik. :( </h2>
+  			<h2 style="text-align:center">Sajnos ez a funkció még nem működik. :( </h2>
           	<img src="images/working.jpg" style="height:400px" />
        </div>
  	   <div ng-include="templates.footer"></div>
